--- a/.deliver/config
+++ b/.deliver/config
@@ -16,3 +16,42 @@ USING_DISTILLERY=true
 PRODUCTION_HOSTS="107.170.71.198" # deploy / production hosts separated by space
 PRODUCTION_USER="deploy" # local user at deploy hosts
 DELIVER_TO="/opt/pfa.nyc" # deploy directory on production hosts
+
+pre_erlang_get_and_update_deps() {
+  local _prod_secret_path="/home/builder/prod.secret.exs"
+  if [ "$TARGET_MIX_ENV" = "prod" ]; then
+    __sync_remote "
+      ln -sfn '$_prod_secret_path' '$BUILD_AT/config/prod.secret.exs'
+    "
+  fi
+}
+
+pre_erlang_clean_compile() {
+    status "Installing NPM dependencies"
+    __sync_remote "  # runs the commands on the build host
+      [ -f ~/.profile ] && source ~/.profile # load profile
+      set -e # fail if any command fails
+
+      cd '$BUILD_AT' # go to the build directory on the build host
+      npm install $SILENCE
+    "
+
+    status "Building static files"
+    __sync_remote "
+      [ -f ~/.profile ]
+      set -e
+
+      cd '$BUILD_AT'
+      mkdir -p priv/static
+      npm run deploy $SILENCE
+    "
+
+    status "Running phoenix.digest"
+    __sync_remote "
+      [ -f ~/.profile ] && source ~/.profile
+      set -e
+
+      cd '$BUILD_AT'
+      APP='$APP' MIX_ENV='$TARGET_MIX_ENV' $MIX_CMD phoenix.digest $SILENCE
+    "
+}
