--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "javascript-brunch": "~2.0.0",
     "jest": "^19.0.2",
     "sass-brunch": "^2.10.4",
-    "uglify-js-brunch": "~2.0.1"
+    "uglify-js-brunch": "~2.0.1",
+    "prepack-brunch": "file:../prepack-brunch"
   }
 }
